--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.6.1"
+  },
+  "engines": {
+    "node": "16.13.2"
   }
 }
